spacing fix on fb weidget

--- a/src/renderer/components/FbWidget.css
+++ b/src/renderer/components/FbWidget.css
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 6vw;
+    gap: 4vw;
 }
 
 .normFlex {
@@ -42,7 +42,7 @@
 
 #fbicon {
     border-radius: 8px;
-    height: 5vw;
+    height: 4.5vw;
 }
 
 #ryanheadshot {
@@ -59,8 +59,8 @@ h2 {
 }
 
 p {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 #fbstatus{
